// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`functional:lib/Command > errors > should error on conflicting option (0) 1`] = `
{
  "code": 1,
  "id": "kronk/conflicting-option",
  "message": "Option(-w, --write) cannot be used with Option(-n, --dry [choice])",
  "additional": [],
  "cause": {
    "conflict": "write",
    "option": "dry",
  },
  "command": {
    "command": "changelog",
    "ancestors": [
      "grease",
    ],
    "args": [],
    "argv": [],
    "optionValueSources": {
      "releases": "default",
      "samefile": "cli",
      "to": "default",
    },
    "opts": {
      "releases": 1,
      "samefile": true,
      "to": "HEAD",
    },
    "optsWithGlobals": {
      "config": true,
      "dry": true,
      "logLevel": "info",
      "tagPrefix": "",
      "unstable": true,
      "write": true,
      "releases": 1,
      "samefile": true,
      "to": "HEAD",
    },
    "usage": {
      "arguments": [],
      "options": "[flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on conflicting option (1) 1`] = `
{
  "code": 1,
  "id": "kronk/conflicting-option",
  "message": "Option(-j, --json) cannot be used with Option(-m, --markdown [])",
  "additional": [],
  "cause": {
    "conflict": "json",
    "option": "markdown",
  },
  "command": {
    "command": "info",
    "ancestors": [
      "grease",
    ],
    "args": [],
    "argv": [],
    "optionValueSources": {
      "markdown": "cli",
    },
    "opts": {
      "markdown": true,
    },
    "optsWithGlobals": {
      "config": true,
      "dry": true,
      "logLevel": "log",
      "tagPrefix": "",
      "unstable": true,
      "json": true,
      "color": false,
      "markdown": true,
    },
    "usage": {
      "arguments": [],
      "options": "[flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on conflicting option (2) 1`] = `
{
  "code": 1,
  "id": "kronk/conflicting-option",
  "message": "Option(-y, --yaml []) cannot be used with Option(-m, --markdown [])",
  "additional": [],
  "cause": {
    "conflict": "yaml",
    "option": "markdown",
  },
  "command": {
    "command": "info",
    "ancestors": [
      "grease",
    ],
    "args": [],
    "argv": [],
    "optionValueSources": {
      "yaml": "cli",
      "markdown": "cli",
    },
    "opts": {
      "yaml": true,
      "markdown": true,
    },
    "optsWithGlobals": {
      "config": true,
      "dry": true,
      "logLevel": "log",
      "tagPrefix": "",
      "unstable": true,
      "yaml": true,
      "markdown": true,
    },
    "usage": {
      "arguments": [],
      "options": "[flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on excess command or option arguments (0) 1`] = `
{
  "code": 1,
  "id": "kronk/excess-arguments",
  "message": "Expected \`1\` argument, but got \`2\`",
  "additional": [],
  "cause": {
    "argv": [
      "-1",
      "1",
    ],
    "expected": 1,
  },
  "command": {
    "command": "clamp",
    "ancestors": [],
    "args": [],
    "argv": [
      "-1",
      "1",
    ],
    "optionValueSources": {
      "max": "default",
      "min": "default",
    },
    "opts": {
      "max": 9007199254740991,
      "min": 0,
    },
    "optsWithGlobals": {
      "max": 9007199254740991,
      "min": 0,
    },
    "usage": {
      "arguments": [
        "<number>",
      ],
      "options": "[flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on excess command or option arguments (1) 1`] = `
{
  "code": 1,
  "id": "kronk/excess-arguments",
  "message": "Expected \`2\` arguments, but got \`3\`",
  "additional": [],
  "cause": {
    "argv": [
      "./index.mjs",
      "./dist",
      "./lib",
    ],
    "expected": 2,
  },
  "command": {
    "command": "copy",
    "ancestors": [],
    "args": [
      undefined,
      ".",
    ],
    "argv": [
      "./index.mjs",
      "./dist",
      "./lib",
    ],
    "optionValueSources": {},
    "opts": {},
    "optsWithGlobals": {},
    "usage": {
      "arguments": [],
      "options": "[flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on excess command or option arguments (2) 1`] = `
{
  "code": 1,
  "id": "kronk/excess-arguments",
  "message": "Expected \`1\` argument, but got \`2\`",
  "additional": [],
  "cause": {
    "argv": [
      "1",
      "3",
    ],
    "expected": 1,
  },
  "command": {
    "command": "factorial",
    "ancestors": [],
    "args": [],
    "argv": [
      "1",
      "3",
    ],
    "optionValueSources": {},
    "opts": {},
    "optsWithGlobals": {},
    "usage": {
      "arguments": [],
      "options": null,
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on excess command or option arguments (3) 1`] = `
{
  "code": 1,
  "id": "kronk/excess-arguments",
  "message": "Option(-w, --write) does not allow an argument",
  "additional": [],
  "cause": {
    "argument": "1",
  },
  "command": {
    "command": "grease",
    "ancestors": [],
    "args": [],
    "argv": [],
    "optionValueSources": {
      "config": "default",
      "dry": "default",
      "logLevel": "default",
      "tagPrefix": "default",
      "unstable": "default",
    },
    "opts": {
      "config": true,
      "dry": true,
      "logLevel": "info",
      "tagPrefix": "",
      "unstable": true,
    },
    "optsWithGlobals": {
      "config": true,
      "dry": true,
      "logLevel": "info",
      "tagPrefix": "",
      "unstable": true,
    },
    "usage": {
      "arguments": [],
      "options": "[flags...]",
      "subcommand": "<command>",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on excess command or option arguments (4) 1`] = `
{
  "code": 1,
  "id": "kronk/excess-arguments",
  "message": "Expected \`0\` arguments, but got \`1\`",
  "additional": [],
  "cause": {
    "argv": [
      "changelog.md",
    ],
    "expected": 0,
  },
  "command": {
    "command": "changelog",
    "ancestors": [
      "grease",
    ],
    "args": [],
    "argv": [
      "changelog.md",
    ],
    "optionValueSources": {
      "releases": "default",
      "samefile": "default",
      "to": "default",
    },
    "opts": {
      "releases": 1,
      "samefile": false,
      "to": "HEAD",
    },
    "optsWithGlobals": {
      "config": true,
      "dry": true,
      "logLevel": "info",
      "tagPrefix": "",
      "unstable": true,
      "releases": 1,
      "samefile": false,
      "to": "HEAD",
    },
    "usage": {
      "arguments": [],
      "options": "[flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on excess command or option arguments (5) 1`] = `
{
  "code": 1,
  "id": "kronk/excess-arguments",
  "message": "Expected \`1\` argument, but got \`2\`",
  "additional": [],
  "cause": {
    "argv": [
      "1.0.0",
      "2.0.0-alpha.1",
    ],
    "expected": 1,
  },
  "command": {
    "command": "dist-tag",
    "ancestors": [
      "grease",
    ],
    "args": [],
    "argv": [
      "1.0.0",
      "2.0.0-alpha.1",
    ],
    "optionValueSources": {},
    "opts": {},
    "optsWithGlobals": {
      "config": true,
      "dry": true,
      "logLevel": "info",
      "tagPrefix": "",
      "unstable": true,
    },
    "usage": {
      "arguments": [],
      "options": "[flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on excess command or option arguments (6) 1`] = `
{
  "code": 1,
  "id": "kronk/excess-arguments",
  "message": "Expected \`1\` argument, but got \`2\`",
  "additional": [],
  "cause": {
    "argv": [
      "3.4.5",
      "3.2.1",
    ],
    "expected": 1,
  },
  "command": {
    "command": "parse",
    "ancestors": [
      "semver",
    ],
    "args": [],
    "argv": [
      "3.4.5",
      "3.2.1",
    ],
    "optionValueSources": {},
    "opts": {},
    "optsWithGlobals": {},
    "usage": {
      "arguments": [],
      "options": "[flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on excess command or option arguments (7) 1`] = `
{
  "code": 1,
  "id": "kronk/excess-arguments",
  "message": "Expected \`1\` argument, but got \`2\`",
  "additional": [],
  "cause": {
    "argv": [
      "0.0.1",
      "3.0.0-alpha.10",
    ],
    "expected": 1,
  },
  "command": {
    "command": "parse",
    "ancestors": [
      "semver",
    ],
    "args": [],
    "argv": [
      "0.0.1",
      "3.0.0-alpha.10",
    ],
    "optionValueSources": {},
    "opts": {},
    "optsWithGlobals": {},
    "usage": {
      "arguments": [],
      "options": "[flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on excess command or option arguments (8) 1`] = `
{
  "code": 1,
  "id": "kronk/excess-arguments",
  "message": "Expected \`1\` argument, but got \`2\`",
  "additional": [],
  "cause": {
    "argv": [
      "3.4.5",
      "1",
    ],
    "expected": 1,
  },
  "command": {
    "command": "parse",
    "ancestors": [
      "semver",
    ],
    "args": [],
    "argv": [
      "3.4.5",
      "1",
    ],
    "optionValueSources": {
      "loose": "cli",
    },
    "opts": {
      "loose": true,
    },
    "optsWithGlobals": {
      "loose": true,
    },
    "usage": {
      "arguments": [],
      "options": "[flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on invalid command or option argument choice (0) 1`] = `
{
  "code": 1,
  "id": "kronk/invalid-argument",
  "message": "Option(-d --debug [choice]) does not allow 'verbose'",
  "additional": [
    "Choices: '0', '1', 'false', 'true', 'n', and 'y'",
  ],
  "cause": {
    "choice": "verbose",
    "choices": [
      "0",
      "1",
      "false",
      "true",
      "n",
      "y",
    ],
  },
  "command": {
    "command": "clamp",
    "ancestors": [],
    "args": [],
    "argv": [],
    "optionValueSources": {
      "max": "default",
      "min": "cli",
    },
    "opts": {
      "max": 9007199254740991,
      "min": 13,
    },
    "optsWithGlobals": {
      "max": 9007199254740991,
      "min": 13,
    },
    "usage": {
      "arguments": [
        "<number>",
      ],
      "options": "[flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on invalid command or option argument choice (1) 1`] = `
{
  "code": 1,
  "id": "kronk/invalid-argument",
  "message": "Option(--gzip, --gzip-level <level>) does not allow '-1'",
  "additional": [
    "Choices: '0', '1', '2', '3', '4', '5', '6', '7', '8', and '9'",
  ],
  "cause": {
    "choice": "-1",
    "choices": [
      "0",
      "1",
      "2",
      "3",
      "4",
      "5",
      "6",
      "7",
      "8",
      "9",
    ],
  },
  "command": {
    "command": "pack",
    "ancestors": [
      "grease",
    ],
    "args": [],
    "argv": [],
    "optionValueSources": {
      "gzipLevel": "default",
    },
    "opts": {
      "gzipLevel": 9,
    },
    "optsWithGlobals": {
      "config": true,
      "dry": true,
      "logLevel": "info",
      "tagPrefix": "",
      "unstable": true,
      "gzipLevel": 9,
    },
    "usage": {
      "arguments": [],
      "options": "[flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on invalid command or option argument choice (2) 1`] = `
{
  "code": 1,
  "id": "kronk/invalid-argument",
  "message": "Option(-n <!>) does not allow '0'",
  "additional": [
    "Choices: '1', '2', '3', '4', '5', '6', '7', '8', and '9'",
  ],
  "cause": {
    "choice": "0",
    "choices": [
      "1",
      "2",
      "3",
      "4",
      "5",
      "6",
      "7",
      "8",
      "9",
    ],
  },
  "command": {
    "command": "tribonacci",
    "ancestors": [],
    "args": [],
    "argv": [],
    "optionValueSources": {},
    "opts": {},
    "optsWithGlobals": {},
    "usage": {
      "arguments": [],
      "options": "[flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on invalid command or option argument choice (3) 1`] = `
{
  "code": 1,
  "id": "kronk/invalid-argument",
  "message": "Argument(<a>) does not allow 'a'",
  "additional": [
    "Choices: '0', '1', '2', '3', '4', '5', '6', '7', '8', and '9'",
  ],
  "cause": {
    "choice": "a",
    "choices": [
      "0",
      "1",
      "2",
      "3",
      "4",
      "5",
      "6",
      "7",
      "8",
      "9",
    ],
  },
  "command": {
    "command": "tribonacci",
    "ancestors": [],
    "args": [],
    "argv": [
      "a",
      "2",
      "3",
    ],
    "optionValueSources": {
      "n": "cli",
    },
    "opts": {
      "n": "1",
    },
    "optsWithGlobals": {
      "n": "1",
    },
    "usage": {
      "arguments": [],
      "options": "[flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on missing command or option argument (0) 1`] = `
{
  "code": 1,
  "id": "kronk/missing-argument",
  "message": "Missing required argument '<n>'",
  "additional": [],
  "command": {
    "command": "clamp",
    "ancestors": [],
    "args": [],
    "argv": [],
    "optionValueSources": {
      "max": "default",
      "min": "default",
    },
    "opts": {
      "max": 9007199254740991,
      "min": 0,
    },
    "optsWithGlobals": {
      "max": 9007199254740991,
      "min": 0,
    },
    "usage": {
      "arguments": [
        "<number>",
      ],
      "options": "[flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on missing command or option argument (1) 1`] = `
{
  "code": 1,
  "id": "kronk/missing-argument",
  "message": "Option(-M --max <n>) requires an argument",
  "additional": [],
  "command": {
    "command": "clamp",
    "ancestors": [],
    "args": [],
    "argv": [],
    "optionValueSources": {
      "max": "default",
      "min": "default",
    },
    "opts": {
      "max": 9007199254740991,
      "min": 0,
    },
    "optsWithGlobals": {
      "max": 9007199254740991,
      "min": 0,
    },
    "usage": {
      "arguments": [
        "<number>",
      ],
      "options": "[flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on missing command or option argument (2) 1`] = `
{
  "code": 1,
  "id": "kronk/missing-argument",
  "message": "Missing required argument '<source>'",
  "additional": [],
  "command": {
    "command": "copy",
    "ancestors": [],
    "args": [
      undefined,
      ".",
    ],
    "argv": [],
    "optionValueSources": {},
    "opts": {},
    "optsWithGlobals": {},
    "usage": {
      "arguments": [],
      "options": "[flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on missing command or option argument (3) 1`] = `
{
  "code": 1,
  "id": "kronk/missing-argument",
  "message": "Missing required argument '<source>'",
  "additional": [],
  "command": {
    "command": "copy",
    "ancestors": [],
    "args": [
      undefined,
      ".",
    ],
    "argv": [],
    "optionValueSources": {},
    "opts": {},
    "optsWithGlobals": {},
    "usage": {
      "arguments": [],
      "options": "[flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on missing command or option argument (4) 1`] = `
{
  "code": 1,
  "id": "kronk/missing-argument",
  "message": "Missing required argument '<type|version>'",
  "additional": [],
  "command": {
    "command": "bump",
    "ancestors": [
      "grease",
    ],
    "args": [],
    "argv": [],
    "optionValueSources": {
      "prestart": "default",
    },
    "opts": {
      "prestart": 1,
    },
    "optsWithGlobals": {
      "config": true,
      "dry": true,
      "logLevel": "info",
      "tagPrefix": "",
      "unstable": true,
      "prestart": 1,
    },
    "usage": {
      "arguments": [],
      "options": "[flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on missing command or option argument (5) 1`] = `
{
  "code": 1,
  "id": "kronk/missing-argument",
  "message": "Missing required argument '<target>'",
  "additional": [],
  "command": {
    "command": "dist-tag",
    "ancestors": [
      "grease",
    ],
    "args": [],
    "argv": [],
    "optionValueSources": {},
    "opts": {},
    "optsWithGlobals": {
      "config": true,
      "dry": true,
      "logLevel": "info",
      "tagPrefix": "",
      "unstable": true,
    },
    "usage": {
      "arguments": [],
      "options": "[flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on missing command or option argument (6) 1`] = `
{
  "code": 1,
  "id": "kronk/missing-argument",
  "message": "Option(-M, --manifest <manifest>) requires an argument",
  "additional": [],
  "command": {
    "command": "manifest",
    "ancestors": [
      "grease",
    ],
    "args": [],
    "argv": [],
    "optionValueSources": {},
    "opts": {},
    "optsWithGlobals": {
      "config": true,
      "dry": true,
      "logLevel": "info",
      "tagPrefix": "",
      "unstable": true,
    },
    "usage": {
      "arguments": [],
      "options": "[flags...]",
      "subcommand": "<command>",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on missing command or option argument (7) 1`] = `
{
  "code": 1,
  "id": "kronk/missing-argument",
  "message": "Missing required argument '<fieldValue...>'",
  "additional": [],
  "command": {
    "command": "set",
    "ancestors": [
      "manifest",
      "grease",
    ],
    "args": [],
    "argv": [],
    "optionValueSources": {},
    "opts": {},
    "optsWithGlobals": {
      "config": true,
      "dry": true,
      "logLevel": "info",
      "tagPrefix": "",
      "unstable": true,
    },
    "usage": {
      "arguments": [
        "<field=value...>",
      ],
      "options": "[flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on missing command or option argument (8) 1`] = `
{
  "code": 1,
  "id": "kronk/missing-argument",
  "message": "Missing required argument '<numbers...>'",
  "additional": [],
  "command": {
    "command": "smallest-num",
    "ancestors": [],
    "args": [],
    "argv": [],
    "optionValueSources": {},
    "opts": {},
    "optsWithGlobals": {},
    "usage": {
      "arguments": [],
      "options": "[flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on missing command or option argument (9) 1`] = `
{
  "code": 1,
  "id": "kronk/missing-argument",
  "message": "Missing required argument '<c>'",
  "additional": [],
  "command": {
    "command": "tribonacci",
    "ancestors": [],
    "args": [],
    "argv": [
      "3",
      "9",
    ],
    "optionValueSources": {
      "n": "cli",
    },
    "opts": {
      "n": "3",
    },
    "optsWithGlobals": {
      "n": "3",
    },
    "usage": {
      "arguments": [],
      "options": "[flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on missing mandatory option (0) 1`] = `
{
  "code": 1,
  "id": "kronk/missing-mandatory-option",
  "message": "Option(-R, --registry <url!>) is required",
  "additional": [],
  "command": {
    "command": "publish",
    "ancestors": [
      "grease",
    ],
    "args": [],
    "argv": [
      "@flex-development-kronk-1.0.0.tgz",
    ],
    "optionValueSources": {
      "tag": "default",
    },
    "opts": {
      "tag": "latest",
    },
    "optsWithGlobals": {
      "config": true,
      "dry": true,
      "logLevel": "info",
      "tagPrefix": "",
      "unstable": true,
      "tag": "latest",
    },
    "usage": {
      "arguments": [],
      "options": "--registry <url!> [flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on missing mandatory option (1) 1`] = `
{
  "code": 1,
  "id": "kronk/missing-mandatory-option",
  "message": "Option(-p | --parent <!>) is required",
  "additional": [],
  "command": {
    "command": "resolve",
    "ancestors": [
      "mlly",
    ],
    "args": [],
    "argv": [
      "#lib/command",
    ],
    "optionValueSources": {
      "conditions": "default",
    },
    "opts": {
      "conditions": Set {
        "node",
        "import",
      },
    },
    "optsWithGlobals": {
      "conditions": Set {
        "node",
        "import",
      },
    },
    "usage": {
      "arguments": [],
      "options": "[flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on missing mandatory option (2) 1`] = `
{
  "code": 1,
  "id": "kronk/missing-mandatory-option",
  "message": "Option(-n <!>) is required",
  "additional": [],
  "command": {
    "command": "tribonacci",
    "ancestors": [],
    "args": [],
    "argv": [
      "1",
      "2",
      "3",
    ],
    "optionValueSources": {},
    "opts": {},
    "optsWithGlobals": {},
    "usage": {
      "arguments": [],
      "options": "[flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on unknown implied option (0) 1`] = `
{
  "code": 1,
  "id": "kronk/unknown-implied-option",
  "message": "Implied option for \`LEVEL\` not found",
  "additional": [],
  "cause": {
    "commands": [
      "grease",
    ],
    "implies": {
      "LEVEL": "log",
    },
    "key": "LEVEL",
    "option": "Option(-j, --json)",
  },
}
`;

exports[`functional:lib/Command > errors > should error on unknown implied option (1) 1`] = `
{
  "code": 1,
  "id": "kronk/unknown-implied-option",
  "message": "Implied option for \`LEVEL\` not found",
  "additional": [],
  "cause": {
    "commands": [
      "grease",
    ],
    "implies": {
      "LEVEL": "log",
    },
    "key": "LEVEL",
    "option": "Option(-j, --json)",
  },
}
`;

exports[`functional:lib/Command > errors > should error on unknown implied option (2) 1`] = `
{
  "code": 1,
  "id": "kronk/unknown-implied-option",
  "message": "Implied option for \`level\` not found",
  "additional": [],
  "cause": {
    "commands": [
      "info",
      "grease",
    ],
    "implies": {
      "level": "log",
    },
    "key": "level",
    "option": "Option(-m, --markdown [])",
  },
}
`;

exports[`functional:lib/Command > errors > should error on unknown implied option (3) 1`] = `
{
  "code": 1,
  "id": "kronk/unknown-implied-option",
  "message": "Implied option for \`level\` not found",
  "additional": [],
  "cause": {
    "commands": [
      "info",
      "grease",
    ],
    "implies": {
      "level": "log",
    },
    "key": "level",
    "option": "Option(-m, --markdown [])",
  },
}
`;

exports[`functional:lib/Command > errors > should error on unknown option (0) 1`] = `
{
  "code": 1,
  "id": "kronk/unknown-option",
  "message": "Unknown option '--debug'",
  "additional": [],
  "cause": {
    "flag": "--debug",
  },
  "command": {
    "command": "copy",
    "ancestors": [],
    "args": [
      undefined,
      ".",
    ],
    "argv": [
      "./index.mts",
      "--debug",
    ],
    "optionValueSources": {},
    "opts": {},
    "optsWithGlobals": {},
    "usage": {
      "arguments": [],
      "options": "[flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on unknown option (1) 1`] = `
{
  "code": 1,
  "id": "kronk/unknown-option",
  "message": "Unknown option '-V'",
  "additional": [],
  "cause": {
    "flag": "-V",
  },
  "command": {
    "command": "factorial",
    "ancestors": [],
    "args": [],
    "argv": [
      "-V",
      "3",
    ],
    "optionValueSources": {},
    "opts": {},
    "optsWithGlobals": {},
    "usage": {
      "arguments": [],
      "options": null,
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on unknown option (2) 1`] = `
{
  "code": 1,
  "id": "kronk/unknown-option",
  "message": "Unknown option '--list'",
  "additional": [],
  "cause": {
    "flag": "--list",
  },
  "command": {
    "command": "tag",
    "ancestors": [
      "grease",
    ],
    "args": [],
    "argv": [
      "--list",
    ],
    "optionValueSources": {},
    "opts": {},
    "optsWithGlobals": {
      "config": true,
      "dry": true,
      "logLevel": "info",
      "tagPrefix": "",
      "unstable": true,
    },
    "usage": {
      "arguments": [],
      "options": "[flags...]",
      "subcommand": "<command>",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on unknown option (3) 1`] = `
{
  "code": 1,
  "id": "kronk/unknown-option",
  "message": "Unknown option '-m'",
  "additional": [],
  "cause": {
    "flag": "-m",
  },
  "command": {
    "command": "grease",
    "ancestors": [],
    "args": [],
    "argv": [
      "-m",
      "info",
      "-y",
    ],
    "optionValueSources": {
      "config": "default",
      "dry": "default",
      "logLevel": "default",
      "tagPrefix": "default",
      "unstable": "default",
    },
    "opts": {
      "config": true,
      "dry": true,
      "logLevel": "info",
      "tagPrefix": "",
      "unstable": true,
    },
    "optsWithGlobals": {
      "config": true,
      "dry": true,
      "logLevel": "info",
      "tagPrefix": "",
      "unstable": true,
    },
    "usage": {
      "arguments": [],
      "options": "[flags...]",
      "subcommand": "<command>",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on unknown option (4) 1`] = `
{
  "code": 1,
  "id": "kronk/unknown-option",
  "message": "Unknown option '-m'",
  "additional": [],
  "cause": {
    "flag": "-m",
  },
  "command": {
    "command": "resolve",
    "ancestors": [
      "mlly",
    ],
    "args": [],
    "argv": [
      "a.mts",
      "-m",
      "main",
    ],
    "optionValueSources": {
      "conditions": "default",
    },
    "opts": {
      "conditions": Set {
        "node",
        "import",
      },
    },
    "optsWithGlobals": {
      "parent": "file://\${process.cwd()}",
      "conditions": Set {
        "node",
        "import",
      },
    },
    "usage": {
      "arguments": [],
      "options": "[flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > errors > should error on unknown option (5) 1`] = `
{
  "code": 1,
  "id": "kronk/unknown-option",
  "message": "Unknown option '-S'",
  "additional": [],
  "cause": {
    "flag": "-S",
  },
  "command": {
    "command": "parse",
    "ancestors": [
      "semver",
    ],
    "args": [],
    "argv": [
      "3.4.5",
      "-S",
    ],
    "optionValueSources": {},
    "opts": {},
    "optsWithGlobals": {},
    "usage": {
      "arguments": [],
      "options": "[flags...]",
      "subcommand": "[command]",
    },
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (0) 1`] = `
{
  "command": "clamp",
  "ancestors": [],
  "args": [
    0,
  ],
  "argv": [
    "0",
  ],
  "optionValueSources": {
    "max": "default",
    "min": "default",
  },
  "opts": {
    "max": 9007199254740991,
    "min": 0,
  },
  "optsWithGlobals": {
    "max": 9007199254740991,
    "min": 0,
  },
  "usage": {
    "arguments": [
      "<number>",
    ],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (1) 1`] = `
{
  "command": "clamp",
  "ancestors": [],
  "args": [
    1,
  ],
  "argv": [
    "1",
  ],
  "optionValueSources": {
    "max": "default",
    "min": "default",
  },
  "opts": {
    "max": 9007199254740991,
    "min": 0,
  },
  "optsWithGlobals": {
    "max": 9007199254740991,
    "min": 0,
  },
  "usage": {
    "arguments": [
      "<number>",
    ],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (2) 1`] = `
{
  "command": "clamp",
  "ancestors": [],
  "args": [
    3,
  ],
  "argv": [
    "3",
  ],
  "optionValueSources": {
    "max": "cli",
    "min": "cli",
  },
  "opts": {
    "max": 13,
    "min": 0,
  },
  "optsWithGlobals": {
    "max": 13,
    "min": 0,
  },
  "usage": {
    "arguments": [
      "<number>",
    ],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (3) 1`] = `
{
  "command": "clamp",
  "ancestors": [],
  "args": [
    -13,
  ],
  "argv": [
    "-13",
  ],
  "optionValueSources": {
    "max": "cli",
    "min": "cli",
  },
  "opts": {
    "max": 3,
    "min": -1,
  },
  "optsWithGlobals": {
    "max": 3,
    "min": -1,
  },
  "usage": {
    "arguments": [
      "<number>",
    ],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (4) 1`] = `
{
  "command": "clamp",
  "ancestors": [],
  "args": [
    1,
  ],
  "argv": [
    "1",
  ],
  "optionValueSources": {
    "max": "cli",
    "min": "cli",
  },
  "opts": {
    "max": 26,
    "min": 13,
  },
  "optsWithGlobals": {
    "max": 26,
    "min": 13,
  },
  "usage": {
    "arguments": [
      "<number>",
    ],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (5) 1`] = `
{
  "command": "copy",
  "ancestors": [],
  "args": [
    "./dist/index.mjs",
    ".",
  ],
  "argv": [
    "./dist/index.mjs",
  ],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {},
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (6) 1`] = `
{
  "command": "copy",
  "ancestors": [],
  "args": [
    "./src/global.d.mts",
    "./dist/global.d.mts",
  ],
  "argv": [
    "./src/global.d.mts",
    "./dist/global.d.mts",
  ],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {},
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (7) 1`] = `
{
  "command": "copy",
  "ancestors": [],
  "args": [
    "./src/main.mjs",
    ".",
  ],
  "argv": [
    "./src/main.mjs",
  ],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {},
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (8) 1`] = `
{
  "command": "copy",
  "ancestors": [],
  "args": [
    "./src/typings/*.d.mts",
    "./dist/typings",
  ],
  "argv": [
    "./src/typings/*.d.mts",
    "./dist/typings",
  ],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {},
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (9) 1`] = `
{
  "command": "distinct",
  "ancestors": [],
  "args": [
    Set {},
  ],
  "argv": [],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {},
  "usage": {
    "arguments": [],
    "options": null,
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (10) 1`] = `
{
  "command": "distinct",
  "ancestors": [],
  "args": [
    Set {},
  ],
  "argv": [],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {},
  "usage": {
    "arguments": [],
    "options": null,
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (11) 1`] = `
{
  "command": "distinct",
  "ancestors": [],
  "args": [
    Set {
      "0",
      "1",
      "2",
      "3",
      "4",
      "5",
      "6",
      "7",
      "8",
      "9",
    },
  ],
  "argv": [
    "0",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
    "0",
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
  ],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {},
  "usage": {
    "arguments": [],
    "options": null,
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (12) 1`] = `
{
  "command": "distinct",
  "ancestors": [],
  "args": [
    Set {
      "0",
      "1",
    },
  ],
  "argv": [
    "0",
    "0",
    "1",
  ],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {},
  "usage": {
    "arguments": [],
    "options": null,
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (13) 1`] = `
{
  "command": "smallest-num",
  "ancestors": [],
  "args": [
    Set {
      "3",
      "4",
      "5",
    },
  ],
  "argv": [
    "3",
    "4",
    "5",
  ],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {},
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (14) 1`] = `
{
  "command": "bump",
  "ancestors": [
    "grease",
  ],
  "args": [
    "major",
  ],
  "argv": [
    "major",
  ],
  "optionValueSources": {
    "prestart": "default",
  },
  "opts": {
    "prestart": 1,
  },
  "optsWithGlobals": {
    "config": true,
    "dry": true,
    "logLevel": "info",
    "tagPrefix": "",
    "unstable": true,
    "cwd": "\${process.cwd()}",
    "prestart": 1,
  },
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (15) 1`] = `
{
  "command": "bump",
  "ancestors": [
    "grease",
  ],
  "args": [
    "3.1.3",
    Set {
      "package.json",
      "versions.json",
    },
  ],
  "argv": [
    "3.1.3",
    "package.json",
    "versions.json",
  ],
  "optionValueSources": {
    "prestart": "default",
  },
  "opts": {
    "prestart": 1,
  },
  "optsWithGlobals": {
    "config": true,
    "dry": true,
    "logLevel": "log",
    "tagPrefix": "grease@",
    "unstable": true,
    "json": true,
    "color": false,
    "cwd": "\${process.cwd()}",
    "prestart": 1,
  },
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (16) 1`] = `
{
  "command": "recommend",
  "ancestors": [
    "bump",
    "grease",
  ],
  "args": [],
  "argv": [],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {
    "config": true,
    "dry": true,
    "logLevel": "info",
    "tagPrefix": "",
    "unstable": true,
    "cwd": "\${process.cwd()}",
    "prestart": 1,
  },
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (17) 1`] = `
{
  "command": "recommend",
  "ancestors": [
    "bump",
    "grease",
  ],
  "args": [],
  "argv": [],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {
    "config": true,
    "dry": true,
    "logLevel": "verbose",
    "tagPrefix": "",
    "unstable": true,
    "json": true,
    "color": false,
    "cwd": "\${process.cwd()}",
    "prestart": 1,
    "preid": "alpha",
  },
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (18) 1`] = `
{
  "command": "recommend",
  "ancestors": [
    "bump",
    "grease",
  ],
  "args": [
    "1.0.0-alpha.3",
  ],
  "argv": [
    "1.0.0-alpha.3",
  ],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {
    "config": true,
    "dry": true,
    "logLevel": "info",
    "tagPrefix": "",
    "unstable": false,
    "cwd": "\${process.cwd()}",
    "prestart": 1,
  },
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (19) 1`] = `
{
  "command": "changelog",
  "ancestors": [
    "grease",
  ],
  "args": [],
  "argv": [],
  "optionValueSources": {
    "releases": "cli",
    "samefile": "default",
    "to": "cli",
  },
  "opts": {
    "releases": 0,
    "samefile": false,
    "to": "$(jq .version package.json -r)",
  },
  "optsWithGlobals": {
    "config": true,
    "dry": true,
    "logLevel": "info",
    "tagPrefix": "",
    "unstable": true,
    "write": true,
    "cwd": "\${process.cwd()}",
    "releases": 0,
    "samefile": false,
    "to": "$(jq .version package.json -r)",
  },
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (20) 1`] = `
{
  "command": "changelog",
  "ancestors": [
    "grease",
  ],
  "args": [],
  "argv": [],
  "optionValueSources": {
    "releases": "default",
    "samefile": "default",
    "to": "default",
    "outfile": "cli",
  },
  "opts": {
    "releases": 1,
    "samefile": false,
    "to": "HEAD",
    "outfile": "$NOTES_FILE",
  },
  "optsWithGlobals": {
    "config": true,
    "dry": true,
    "logLevel": "info",
    "tagPrefix": "",
    "unstable": true,
    "write": true,
    "cwd": "\${process.cwd()}",
    "releases": 1,
    "samefile": false,
    "to": "HEAD",
    "outfile": "$NOTES_FILE",
  },
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (21) 1`] = `
{
  "command": "dist-tag",
  "ancestors": [
    "grease",
  ],
  "args": [
    "2.0.0-beta.4",
  ],
  "argv": [
    "2.0.0-beta.4",
  ],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {
    "config": true,
    "dry": true,
    "logLevel": "info",
    "tagPrefix": "",
    "unstable": true,
    "cwd": "\${process.cwd()}",
  },
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (22) 1`] = `
{
  "command": "dist-tag",
  "ancestors": [
    "grease",
  ],
  "args": [
    "grease@3.0.0-alpha.10",
  ],
  "argv": [
    "grease@3.0.0-alpha.10",
  ],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {
    "config": true,
    "dry": true,
    "logLevel": "info",
    "tagPrefix": "grease@",
    "unstable": true,
    "cwd": "\${process.cwd()}",
  },
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (23) 1`] = `
{
  "command": "get",
  "ancestors": [
    "manifest",
    "grease",
  ],
  "args": [
    "version",
  ],
  "argv": [
    "version",
  ],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {
    "config": true,
    "dry": true,
    "logLevel": "info",
    "tagPrefix": "",
    "unstable": true,
    "cwd": "\${process.cwd()}",
    "manifest": "package.json",
  },
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (24) 1`] = `
{
  "command": "set",
  "ancestors": [
    "manifest",
    "grease",
  ],
  "args": [
    Set {
      "name=@flex-development/kronk",
      "version=0.0.0",
    },
  ],
  "argv": [
    "name=@flex-development/kronk",
    "version=0.0.0",
  ],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {
    "config": true,
    "dry": true,
    "logLevel": "info",
    "tagPrefix": "",
    "unstable": true,
    "cwd": "\${process.cwd()}",
    "manifest": "\${process.cwd()}/package.json",
  },
  "usage": {
    "arguments": [
      "<field=value...>",
    ],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (25) 1`] = `
{
  "command": "pack",
  "ancestors": [
    "grease",
  ],
  "args": [],
  "argv": [],
  "optionValueSources": {
    "gzipLevel": "default",
    "out": "cli",
  },
  "opts": {
    "gzipLevel": 9,
    "out": "%s-%v.tgz",
  },
  "optsWithGlobals": {
    "config": true,
    "dry": true,
    "logLevel": "info",
    "tagPrefix": "",
    "unstable": true,
    "cwd": "\${process.cwd()}",
    "gzipLevel": 9,
    "out": "%s-%v.tgz",
  },
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (26) 1`] = `
{
  "command": "pack",
  "ancestors": [
    "grease",
  ],
  "args": [
    Set {
      "CHANGELOG.md",
      "LICENSE.md",
      "README.md",
      "dist",
    },
  ],
  "argv": [
    "CHANGELOG.md",
    "LICENSE.md",
    "README.md",
    "dist",
  ],
  "optionValueSources": {
    "gzipLevel": "cli",
    "out": "cli",
  },
  "opts": {
    "gzipLevel": 9,
    "out": "%s-%v.tgz",
  },
  "optsWithGlobals": {
    "config": true,
    "dry": true,
    "logLevel": "info",
    "tagPrefix": "",
    "unstable": true,
    "cwd": "\${process.cwd()}",
    "gzipLevel": 9,
    "out": "%s-%v.tgz",
  },
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (27) 1`] = `
{
  "command": "publish",
  "ancestors": [
    "grease",
  ],
  "args": [],
  "argv": [],
  "optionValueSources": {
    "tag": "default",
    "provenance": "cli",
    "registry": "cli",
  },
  "opts": {
    "tag": "latest",
    "provenance": true,
    "registry": "https://npm.pkg.github.com",
  },
  "optsWithGlobals": {
    "config": true,
    "dry": true,
    "logLevel": "info",
    "tagPrefix": "",
    "unstable": true,
    "cwd": "\${process.cwd()}",
    "tag": "latest",
    "provenance": true,
    "registry": "https://npm.pkg.github.com",
  },
  "usage": {
    "arguments": [],
    "options": "--registry <url!> [flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (28) 1`] = `
{
  "command": "publish",
  "ancestors": [
    "grease",
  ],
  "args": [
    "package.tgz",
  ],
  "argv": [
    "package.tgz",
  ],
  "optionValueSources": {
    "tag": "cli",
    "registry": "cli",
  },
  "opts": {
    "tag": "beta",
    "registry": "https://registry.npmjs.org",
  },
  "optsWithGlobals": {
    "config": true,
    "dry": true,
    "logLevel": "info",
    "tagPrefix": "",
    "unstable": true,
    "cwd": "\${process.cwd()}",
    "tag": "beta",
    "registry": "https://registry.npmjs.org",
  },
  "usage": {
    "arguments": [],
    "options": "--registry <url!> [flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (29) 1`] = `
{
  "command": "create",
  "ancestors": [
    "tag",
    "grease",
  ],
  "args": [
    "3.0.0-alpha.10",
  ],
  "argv": [
    "3.0.0-alpha.10",
  ],
  "optionValueSources": {
    "message": "cli",
    "object": "default",
    "remote": "default",
    "sign": "cli",
    "push": "cli",
  },
  "opts": {
    "message": "release: {tag}",
    "object": "HEAD",
    "remote": "origin",
    "sign": "true",
    "push": true,
  },
  "optsWithGlobals": {
    "config": true,
    "dry": true,
    "logLevel": "info",
    "tagPrefix": "",
    "unstable": true,
    "cwd": "\${process.cwd()}",
    "message": "release: {tag}",
    "object": "HEAD",
    "remote": "origin",
    "sign": "true",
    "push": true,
  },
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (30) 1`] = `
{
  "command": "list",
  "ancestors": [
    "tag",
    "grease",
  ],
  "args": [],
  "argv": [],
  "optionValueSources": {
    "sort": "default",
  },
  "opts": {
    "sort": "-creatordate",
  },
  "optsWithGlobals": {
    "config": true,
    "dry": true,
    "logLevel": "info",
    "tagPrefix": "",
    "unstable": true,
    "cwd": "\${process.cwd()}",
    "sort": "-creatordate",
  },
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (31) 1`] = `
{
  "command": "list",
  "ancestors": [
    "tag",
    "grease",
  ],
  "args": [],
  "argv": [],
  "optionValueSources": {
    "sort": "default",
  },
  "opts": {
    "sort": "-creatordate",
  },
  "optsWithGlobals": {
    "config": true,
    "dry": true,
    "logLevel": "info",
    "tagPrefix": "",
    "unstable": true,
    "cwd": "\${process.cwd()}",
    "sort": "-creatordate",
  },
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (32) 1`] = `
{
  "command": "resolve",
  "ancestors": [
    "mlly",
  ],
  "args": [
    "#internal/tokenize",
  ],
  "argv": [
    "#internal/tokenize",
  ],
  "optionValueSources": {
    "conditions": "default",
  },
  "opts": {
    "conditions": Set {
      "node",
      "import",
    },
  },
  "optsWithGlobals": {
    "parent": "file://\${process.cwd()}",
    "conditions": Set {
      "node",
      "import",
    },
  },
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (33) 1`] = `
{
  "command": "resolve",
  "ancestors": [
    "mlly",
  ],
  "args": [
    "#lib/command",
  ],
  "argv": [
    "#lib/command",
  ],
  "optionValueSources": {
    "conditions": "cli",
    "preserveSymlinks": "cli",
  },
  "opts": {
    "conditions": Set {
      "kronk",
      "node",
      "development",
    },
    "preserveSymlinks": true,
  },
  "optsWithGlobals": {
    "parent": "file://\${process.cwd()}",
    "conditions": Set {
      "kronk",
      "node",
      "development",
    },
    "preserveSymlinks": true,
  },
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (34) 1`] = `
{
  "command": "parse",
  "ancestors": [
    "semver",
  ],
  "args": [
    "3.4.5",
  ],
  "argv": [
    "3.4.5",
  ],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {},
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (35) 1`] = `
{
  "command": "parse",
  "ancestors": [
    "semver",
  ],
  "args": [
    "0.0.1",
  ],
  "argv": [
    "0.0.1",
  ],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {},
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (36) 1`] = `
{
  "command": "parse",
  "ancestors": [
    "semver",
  ],
  "args": [
    " 3.2.1",
  ],
  "argv": [
    " 3.2.1",
  ],
  "optionValueSources": {
    "loose": "cli",
  },
  "opts": {
    "loose": true,
  },
  "optsWithGlobals": {
    "loose": true,
  },
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (37) 1`] = `
{
  "command": "parse",
  "ancestors": [
    "semver",
  ],
  "args": [
    "1.3.2",
  ],
  "argv": [
    "1.3.2",
  ],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {},
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (38) 1`] = `
{
  "command": "satisfies",
  "ancestors": [
    "semver",
  ],
  "args": [
    "1.2.3",
    "1.x || >=2.5.0 || 5.0.0 - 7.2.3",
  ],
  "argv": [
    "1.2.3",
    "1.x || >=2.5.0 || 5.0.0 - 7.2.3",
  ],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {},
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (39) 1`] = `
{
  "command": "max",
  "ancestors": [
    "satisfies",
    "semver",
  ],
  "args": [
    ">=3.0.0",
    Set {
      "0.0.1",
      "3.0.0-alpha.10",
      "1.3.2",
      "3.2.1",
    },
  ],
  "argv": [
    ">=3.0.0",
    "0.0.1",
    "3.0.0-alpha.10",
    "1.3.2",
    "3.2.1",
  ],
  "optionValueSources": {},
  "opts": {},
  "optsWithGlobals": {},
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;

exports[`functional:lib/Command > parsing > should run command (40) 1`] = `
{
  "command": "tribonacci",
  "ancestors": [],
  "args": [
    3,
    3,
    9,
  ],
  "argv": [
    "3",
    "3",
    "9",
  ],
  "optionValueSources": {
    "n": "cli",
  },
  "opts": {
    "n": "3",
  },
  "optsWithGlobals": {
    "n": "3",
  },
  "usage": {
    "arguments": [],
    "options": "[flags...]",
    "subcommand": "[command]",
  },
}
`;
